--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,13 @@ mkdocs = "^1.6.1"
 mkdocs-material = "^9.5.49"
 mkdocstrings = {extras = ["python"], version = "^0.27.0"}
 
+[tool.poetry.group.doc.dependencies]
+mkdocs = "^1.6.1"
+mkdocs-material = "^9.5.49"
+mkdocstrings = {extras = ["python"], version = "^0.27.0"}
+
 [tool.poetry.scripts]
+alphafolio = "alphafolio.main:app"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.4"
